--- a/testRoute/public/error.html
+++ b/testRoute/public/error.html
@@ -1,19 +1,15 @@
-<?php
-    $page_title = "Test PHP"
-// This in fact is a php file
-
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?=$page_title?></title>
+    <title>Error Page Not Found</title>
 </head>
 <body>
-    
-
-    <script src="app.js"></script>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+    </nav>
 </body>
 </html>
